[package]
name = "ritcoin"
version = "0.1.0"
authors = ["iorveth <iorweth@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.3"
sha2 = "0.8"
hex = "0.4"
secp256k1 = {version = "0.15", features = ["rand"]}
ripemd160 = "0.8"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.0"
